--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Travel Advisor</title>
+    <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&libraries=geometry,drawing,places&key=AIzaSyA-eraJ-y5IErxg1ejTVuKZa3M-Hq3Osjw"></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
